--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -373,21 +373,21 @@
 
                     <div class="col-sm-auto">
                         <table id="UretimListeTable"
-                                class="table"
-                                data-show-refresh="false"
-                                data-show-toggle="false"
-                                data-show-fullscreen="false"
-                                data-show-columns="false"
-                                data-show-columns-toggle-all="false"
-                                data-detail-view="false"
-                                data-detail-view-by-click="false"
-                                data-show-export="false"
-                                data-click-to-select="false"
-                                data-show-pagination-switch="false"
-                                data-pagination="false"
-                                data-show-footer="false"
-                                data-mobile-responsive="false"
-                                data-locale="tr-TR">
+                               class="table"
+                               data-show-refresh="false"
+                               data-show-toggle="false"
+                               data-show-fullscreen="false"
+                               data-show-columns="false"
+                               data-show-columns-toggle-all="false"
+                               data-detail-view="false"
+                               data-detail-view-by-click="false"
+                               data-show-export="false"
+                               data-click-to-select="false"
+                               data-show-pagination-switch="false"
+                               data-pagination="false"
+                               data-show-footer="false"
+                               data-mobile-responsive="false"
+                               data-locale="tr-TR">
                             <thead>
                                 <tr>
                                     <th data-formatter="oranFormatter4" data-field="ORAN" data-halign="center" data-align="center">GİRDİLER</th>
@@ -453,39 +453,39 @@
                     </div>
                 </div>
                 <div class="row" style="min-height:33%;display:none" id="UretimeGirenlerTablo">
-                        <div class="table-responsive">
-                            <table id="UretimeGirenlerTable"
-                                   class="table"
-                                   data-search="true"
-                                   data-show-refresh="false"
-                                   data-show-toggle="false"
-                                   data-show-fullscreen="false"
-                                   data-show-columns="false"
-                                   data-show-columns-toggle-all="false"
-                                   data-detail-view="false"
-                                   data-detail-view-by-click="false"
-                                   data-show-export="false"
-                                   data-click-to-select="true"
-                                   data-show-pagination-switch="false"
-                                   data-pagination="false"
-                                   data-id-field="id"
-                                   data-show-footer="false"
-                                   data-mobile-responsive="true"
-                                   data-pagination-parts="['pageSize', 'pageInfo', 'pageList']"
-                                   data-locale="tr-TR">
-                                <thead>
-                                    <tr>
-                                        <th data-formatter="oranFormatter3" data-width="50" data-field="ORAN" data-halign="center" data-align="center">%</th>
-                                        <th data-field="SERI_NO" data-halign="center" data-align="center">SERI_NO</th>
-                                        <th data-formatter="intFormatter" data-field="SERI_MIKTAR" data-halign="center" data-align="center">SERI_MIKTAR</th>
-                                        <th data-formatter="intFormatter" data-field="URETILEN" data-halign="center" data-align="center">URETILEN</th>
-                                        <th data-formatter="intFormatter" data-field="SERI_BAKIYE" data-halign="center" data-align="center">SERI_BAKIYE</th>
-                                        <th data-formatter="oranFormatter2" data-field="ORAN" data-halign="center" data-align="center">ORAN</th>
-                                    </tr>
-                                </thead>
-                            </table>
-                        </div>
-                    
+                    <div class="table-responsive">
+                        <table id="UretimeGirenlerTable"
+                               class="table"
+                               data-search="true"
+                               data-show-refresh="false"
+                               data-show-toggle="false"
+                               data-show-fullscreen="false"
+                               data-show-columns="false"
+                               data-show-columns-toggle-all="false"
+                               data-detail-view="false"
+                               data-detail-view-by-click="false"
+                               data-show-export="false"
+                               data-click-to-select="true"
+                               data-show-pagination-switch="false"
+                               data-pagination="false"
+                               data-id-field="id"
+                               data-show-footer="false"
+                               data-mobile-responsive="true"
+                               data-pagination-parts="['pageSize', 'pageInfo', 'pageList']"
+                               data-locale="tr-TR">
+                            <thead>
+                                <tr>
+                                    <th data-formatter="oranFormatter3" data-width="50" data-field="ORAN" data-halign="center" data-align="center">%</th>
+                                    <th data-field="SERI_NO" data-halign="center" data-align="center">SERI_NO</th>
+                                    <th data-formatter="intFormatter" data-field="SERI_MIKTAR" data-halign="center" data-align="center">SERI_MIKTAR</th>
+                                    <th data-formatter="intFormatter" data-field="URETILEN" data-halign="center" data-align="center">URETILEN</th>
+                                    <th data-formatter="intFormatter" data-field="SERI_BAKIYE" data-halign="center" data-align="center">SERI_BAKIYE</th>
+                                    <th data-formatter="oranFormatter2" data-field="ORAN" data-halign="center" data-align="center">ORAN</th>
+                                </tr>
+                            </thead>
+                        </table>
+                    </div>
+
                 </div>
                 <div class="row" style="margin-top:-5%;min-height:33%;display:none" id="scanner">
                     <div id="element">
@@ -1001,23 +1001,20 @@
             });
         }
 
-        function UretimeGirenler(value)
-        {
+        function UretimeGirenler(value) {
             $.ajax({
                 url: `http://192.168.2.13:83/api/ie/hatgirdi/${value}`,
                 type: 'GET',
-                success: (response) =>
-                {
+                success: (response) => {
                     $('#UretimeGirenlerTable').bootstrapTable('destroy');
                     $('#UretimeGirenlerTable').bootstrapTable({ data: response });
-                    
+
                     $('#UretimeGirenlerTablo').show();
                 }
             });
         }
 
-        function intFormatter(value, row, index)
-        {
+        function intFormatter(value, row, index) {
             return parseInt(value);
         }
 
@@ -1025,8 +1022,7 @@
             return '<p class="meter mt-1" style="height: auto;border: 1px solid #d9dee3;border-radius: 8px;"><span style="width:' + parseFloat(value) + '%;"><span class="progress custom-progress" id="progress-msip" style=" height: 1.5rem; "><span style="text-align: end; color: black;font-size: small;">' + parseFloat(value).toFixed(2) + '%</span></span></span></p>';
         }
 
-        function oranFormatter3(value, index, row)
-        {
+        function oranFormatter3(value, index, row) {
             return '<p class="meter mt-1" style="width: 4.1rem;transform: rotate(270deg);margin: 0 !important;"><span style="width:' + parseFloat(value) + '%;height: 1.5rem;"><span class="progress custom-progress"  style="height: 100%;border-radius: 0 !important;    background-color: #07e655;"></span></span></p>';
         }
 
@@ -1041,27 +1037,24 @@
             $('#UretimListeTable').bootstrapTable({ data: [] });
         });
 
-        function UretimListe(value)
-        {
+        function UretimListe(value) {
             $.ajax({
                 url: `http://192.168.2.13:83/api/ie/hatgirdidetay/${value}`,
                 type: 'GET',
                 success: (response) => {
-                    if (JSON.stringify(response) !== JSON.stringify(UretimListeYedek))
-                    {
+                    if (JSON.stringify(response) !== JSON.stringify(UretimListeYedek)) {
                         UretimListeYedek = response;
                     }
 
                     $('#UretimListeTable').bootstrapTable('destroy');
                     $('#UretimListeTable').bootstrapTable({ data: UretimListeYedek });
 
-                    
+
                 }
             }).then(() => {
                 var ScrollHeight = $('#UretimListeTable').find('tbody')[0].scrollHeight;
 
-                if (ScrollHeight > 400)
-                {
+                if (ScrollHeight > 400) {
                     $('#UretimListeTable').find('tbody')[0].scrollTo(0, ScrollHeight);
                 }
 
@@ -1073,10 +1066,8 @@
         }
 
         //Belirli aralık ile veri çekme işlemi
-        function UretimListeCek()
-        {
-            setInterval(() =>
-            {
+        function UretimListeCek() {
+            setInterval(() => {
                 UretimListe();
             }, 1000);
         }
@@ -1095,44 +1086,45 @@
             padding: 0.15rem 0 !important;
         }
 
-        #UretimListeTable{
-            width:170px;
+        #UretimListeTable {
+            width: 170px;
         }
 
-        #UretimListeTable tbody {
-            display: block;
-            max-height: 400px;
-            overflow-y: auto;
-        }
-
-            #UretimListeTable tbody tr, #UretimListeTable thead {
-                display: table;
-                table-layout: fixed;
-                width: 100%;
+            #UretimListeTable tbody {
+                display: block;
+                max-height: 400px;
+                overflow-y: auto;
             }
 
-        #UretimListeTable tr {
-            border-top-width: 0;
-            border-bottom-width: 0;
-        }
-            #UretimListeTable tr th {
-                border-top-width: 1px;
-            }
+                #UretimListeTable tbody tr, #UretimListeTable thead {
+                    display: table;
+                    table-layout: fixed;
+                    width: 100%;
+                }
 
-            #UretimListeTable tr td {
-                border-width: 1px;
+            #UretimListeTable tr {
                 border-top-width: 0;
                 border-bottom-width: 0;
             }
 
-            #UretimListeTable tr:last-child > td {
-                border-width: 1px;
-                border-top-width: 0;
-            }
+                #UretimListeTable tr th {
+                    border-top-width: 1px;
+                }
 
-        #UretimListeTable td {
-            border-width: 0;
-        }
+                #UretimListeTable tr td {
+                    border-width: 1px;
+                    border-top-width: 0;
+                    border-bottom-width: 0;
+                }
+
+                #UretimListeTable tr:last-child > td {
+                    border-width: 1px;
+                    border-top-width: 0;
+                }
+
+            #UretimListeTable td {
+                border-width: 0;
+            }
     </style>
 
     <script>
@@ -1407,9 +1399,9 @@
 
                     }
                 })
-                
+
             }
-           
+
 
 
         }
@@ -1520,7 +1512,7 @@
 
                     b.setAttribute("data-top2", data[i].TOPLAM_MIKTAR2);
                     b.setAttribute("data-kul2", data[i].KULL_MIKTAR2);
-                    
+
                          b.innerHTML = "<b>" + data[i].STOK_ADI + "</b></br><span style='font-size:12px'> "+data[i].SIP_CARI_ISIM+"</span></br><span style='font-size:12px'> " + data[i].KULL_MIKTAR.toLocaleString() + " " + data[i].OLCU_BR1 + " / " + data[i].TOPLAM_MIKTAR.toLocaleString() + " " + data[i].OLCU_BR1 + " || "+data[i].KULL_MIKTAR2.toLocaleString()+ " " + data[i].OLCU_BR2 + " / "+data[i].TOPLAM_MIKTAR2.toLocaleString()+ " " + data[i].OLCU_BR2 +"</span>";
                     }else{
                          b.innerHTML = "<b>" + data[i].STOK_ADI + "</b></br><span style='font-size:12px'> " + data[i].KULL_MIKTAR.toLocaleString() + " " + data[i].OLCU_BR1 + " / " + data[i].TOPLAM_MIKTAR.toLocaleString() + " " + data[i].OLCU_BR1 +"</span>";
@@ -1786,7 +1778,7 @@
             isemri=value.dataset.isemri;
             max = parseInt(value.dataset.top) - parseInt(value.dataset.kul)
             max2 = parseInt(value.dataset.top2) - parseInt(value.dataset.kul2)
-            var mik2 = parseInt(value.dataset.mik2) 
+            var mik2 = parseInt(value.dataset.mik2)
             $("#miktar11").val(null);
             $("#miktar22").val(null);
             $("#miktar22").prop("disabled", true);
@@ -2071,55 +2063,58 @@
         var toplam = 0;
         var oldSipNo = null;
         function load(url) {
-             $.getJSON(url,function(data){
-                 var d = data;
-                
-                         $.ajax({
-                        url: '@Url.Action("TrpzUretim", "Uretim")',
-                             type: 'POST',
-                             data: { "stokkodu": stok, "ISEMRINO": d[0].ISEMRINO, "SERI_NO": d[0].SERI_NO, "KULL_MIKTAR": d[0].KULL_MIKTAR, "mik2": d[0].KULL_MIKTAR2 },
-                        error: function (data) {
-                            console.log(data);
+            $.getJSON(url, function (data) {
+                var d = data;
+
+                $.ajax({
+                    url: '@Url.Action("TrpzUretim", "Uretim")',
+                    type: 'POST',
+                    data: { "stokkodu": stok, "ISEMRINO": d[0].ISEMRINO, "SERI_NO": d[0].SERI_NO, "KULL_MIKTAR": d[0].KULL_MIKTAR, "mik2": d[0].KULL_MIKTAR2 },
+                    error: function (data) {
+                        console.log(data);
+                        $("#progress2").hide();
+                        $("#SiparisModal").modal('hide');
+                        Swal.fire('Başarısız!', 'Kayıt başarısız,tekrar deneyin', 'error');
+                    },
+                    success: function (data) {
+                        console.log(data);
+                        if (d[0].ISEMRINO.substring(0, 2) != 'MH' && d[0].ISEMRINO.substring(0, 2) != 'BK') {
+                            if (d[0].KULL_MIKTAR != 0) {
+                                load(url);
+                            } else {
+                                $("#progress2").hide();
+                                $("#SiparisModal").modal('hide');
+                                Swal.fire('Başarılı!', 'Kayıt başarılı', 'success');
+                                document.getElementById(btnid).onclick();
+                                TrpzBarkod(d[0].SERI_NO);
+                            }
+                        } else {
                             $("#progress2").hide();
                             $("#SiparisModal").modal('hide');
-                            Swal.fire(
-                                'Başarısız!',
-                                'Kayıt başarısız,tekrar deneyin',
-                                'error'
-                            )
-                        },
-                             success: function (data) {
-                                 console.log(data);
-                                 if (d[0].ISEMRINO.substring(0, 2) != 'MH' && d[0].ISEMRINO.substring(0, 2) != 'BK') {
-                                     if (d[0].KULL_MIKTAR != 0) {
-                                         load(url);
-                                     } else {
-                                         $("#progress2").hide();
-                                         Swal.fire(
-                                             'Başarılı!',
-                                             'Kayıt başarılı',
-                                             'success'
-                                         )
-                                         $("#SiparisModal").modal('hide');
-                                         document.getElementById(btnid).onclick();
-                                     }
-                                 } else {
-                                     $("#progress2").hide();
-                                     Swal.fire(
-                                         'Başarılı!',
-                                         'Kayıt başarılı',
-                                         'success'
-                                     )
-                                     $("#SiparisModal").modal('hide');
-                                     document.getElementById(btnid).onclick();
-                                 }
-                        
-
-
-
+                            Swal.fire('Başarılı!', 'Kayıt başarılı', 'success');
+                            document.getElementById(btnid).onclick();
                         }
-                    })
-        })
+                    }
+                });
+            });
+        }
+        function TrpzBarkod(BarkodNo)
+        {
+            $.ajax({
+                url: `http://192.168.2.13:83/api/seri/kontrol/${BarkodNo}`,
+                type: 'GET',
+                error: (ApiData) => { console.error(`TRPZBarkod: ${ApiData}`); },
+                success: (ApiData) => {
+                    if (ApiData.length > 0) {
+                        $.ajax({
+                            url: '@Url.Action("TrpzUretimKaydiSonuBarkodCiktisi", "Uretim")',
+                            type: 'POST',
+                            data: ApiData[0],
+                            error: (ApiData) => { console.error(`TRPZBarkod: ${ApiData}`); }
+                        });
+                    }
+                }
+            });
         }
         function ModalKaydet() {
             if (m1 != null) {
@@ -2149,9 +2144,9 @@
                         }
                     })
                 } else {
-                   
+
                     var url = "//192.168.2.13:83/api/ie/USK/" + hat + "/" + stok + "/" + isemri + "/" + $("#miktar11").val().toString().trim() + "/" + $("#miktar22").val().toString().trim() + "/0";
-                   
+
                     load(url);
                 }
             } else {
