--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -1474,7 +1474,7 @@
                         td.innerHTML = '<input class="border-0 text-center" style="width:80px" readonly oninput="DlInputChange(this)" value="1">'
                     }
                     else if (i == 7) {
-                        
+
                         td.innerHTML = '<i onclick="ReferansSecimiTemizle(this, \'DL\')" data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<span>Seçimi Temizle</span>" class="bi bi-x-lg me-2" style="color:#203289;font-size:larger;cursor:pointer;float:left"></i>' +'<select class="js-select" style="width:100px;float: left" value="' + table.getElementsByTagName("tr")[rownum].getElementsByTagName("select")[2].value + '"><option disabled="">SEÇİNİZ</option><option selected="" value="' + table.getElementsByTagName("tr")[rownum].getElementsByTagName("select")[2].value + '" >' + table.getElementsByTagName("tr")[rownum].getElementsByTagName("select")[2].value + '</option></select>'
                     }
                     else if (i == 8) {
@@ -1522,7 +1522,7 @@
                 ParcalioranAlt(table.getElementsByTagName("tr")[rownum + 1].getElementsByTagName("input")[0])
             }
 
-            
+
 
     }
     else {
@@ -2252,11 +2252,19 @@
                 toast.addEventListener('mouseleave', Swal.resumeTimer)
             }
         })
-
-        Toast.fire({
-            icon: 'success',
-            title: 'Veriler başarılı bir şekilde Netsis\'e aktarıldı.'
-        });
+        var Message =@Html.Raw(Json.Encode(TempData["Hata"]));
+        if (Message == "HATA") {
+            Toast.fire({
+                icon: 'error',
+                title: 'Veriler Netsis\'e aktarılamadı.'
+            });
+        } else {
+            Toast.fire({
+                icon: 'success',
+                title: 'Veriler başarılı bir şekilde Netsis\'e aktarıldı.'
+            });
+        }
+       
         $("#seri").val(null);
         document.getElementById("genislikalti").value = 0;
     },
@@ -2299,7 +2307,7 @@
                 } else {
                     lis = JSON.parse(localStorage.PBPivotVeri);
                 }
-                
+
                                 $.ajax({
     url: '@Url.Action("PostBKPBRF", "IsEmri")',
     type: 'POST',
@@ -2388,8 +2396,8 @@
                 } else {
                     currenttd[i].removeAttribute("style");
                 }
-                    
-                
+
+
             }
         }
         if (document.getElementById(tableId).getElementsByTagName("tr")[rownum - 1].getElementsByTagName("select")[0].value == "DL01") {
@@ -2531,7 +2539,7 @@
     function ReferansSecimiTemizle(Satir, Tip)
     {
         var SatirNo = Satir.parentNode.parentNode.rowIndex;
-     
+
         switch (Tip) {
             case "TP":
                 document.getElementById(`${Tip.toUpperCase()}Table`).getElementsByTagName("tr")[SatirNo].getElementsByTagName("select")[2].value = "SEÇİNİZ";
