--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -106,6 +106,11 @@
             border-top-right-radius: 15px;
             border-top-left-radius: 15px;
         }
+        .form-check-input:checked {
+            background-color: #4417FA !important;
+            border-color: #4417FA;
+            box-shadow: 0 2px 4px 0 rgba(105, 108, 255, 0.4);
+        }
     </style>
 </head>
 <body>
@@ -647,7 +652,10 @@
                 <div class="col">
 
 
-
+                    <div class="form-check form-switch mb-2" id="tamamidiv" style="display:none">
+                        <input id="tamami" checked="checked" onchange="chcked()" class="form-check-input" type="checkbox">
+                        <label class="form-check-label" for="etiketyazdir">Tamamı Kullanılsın</label>
+                    </div>
                     <div class="text-center" id="DLPivotTop"></div>
                     <div class="text-center" id="TPPivotTop" style="display:none"></div>
                     <div class="text-center" id="BKPivotTop" style="display:none"></div>
@@ -1773,6 +1781,7 @@
 
         $(function () {
             document.getElementById("DLPivot").replaceChildren();
+            $("#tamamidiv").show()
             $("#DLPivot").pivot(
                 takiplist,
                 {
@@ -1964,6 +1973,7 @@
             case 'DL':
                 localStorage.DLlist = null;
                 localStorage.DLlistTop = null;
+                $("#tamamidiv").hide();
                 document.getElementById("DLPivot").replaceChildren();
                 document.getElementById("DLPivotTop").replaceChildren();
                 break;
@@ -2019,6 +2029,9 @@
             $("#RFTable").hide();
             $("#RFPivot").hide();
             $("#RFPivotTop").hide();
+            if (localStorage.DLlist != null && localStorage.DLlist != undefined && localStorage.DLlist != "null") {
+                $("#tamamidiv").show();
+            }
         }
         else if (val.value == "TP")
         {
@@ -2045,7 +2058,7 @@
             $("#RFTable").hide();
             $("#RFPivot").hide();
             $("#RFPivotTop").hide();
-
+            $("#tamamidiv").hide();
             TPTableLoadLocalData();
         }
         else if (val.value == "BK") {
@@ -2072,7 +2085,7 @@
             $("#RFTable").hide();
             $("#RFPivot").hide();
             $("#RFPivotTop").hide();
-
+            $("#tamamidiv").hide();
             BKTableLoadLocalData();
         }
         else if (val.value == "PB")
@@ -2100,7 +2113,7 @@
             $("#RFTable").hide();
             $("#RFPivot").hide();
             $("#RFPivotTop").hide();
-
+            $("#tamamidiv").hide();
             PBTableLoadLocalData();
         }
         else if (val.value == "RF") {
@@ -2127,7 +2140,7 @@
             $("#RFTable").show();
             $("#RFPivot").show();
             $("#RFPivotTop").show();
-
+            $("#tamamidiv").hide();
             RFTableLoadLocalData();
         }
         else
@@ -2155,15 +2168,16 @@
             $("#RFTable").hide();
             $("#RFPivot").hide();
             $("#RFPivotTop").hide();
-
+            $("#tamamidiv").hide();
 
         }
 
         $(".js-select").trigger("change");
         KaydetAktivite();
     }
+   
     function netsisaktar() {
-
+        var TamamiAktarilsin = $("#tamami").is(":checked");
         $("#content").show();
         document.body.style.cursor = 'wait';
         var Tip = $('input[name="uretim-tip"]:checked').val();
@@ -2174,7 +2188,7 @@
                 $.ajax({
     url: '@Url.Action("Post","IsEmri")',
     type: 'POST',
-    data: { isemri: lis },
+                    data: { isemri: lis, TamamiKullanılsin: TamamiAktarilsin },
     success: function () {
 
         $("#content").hide();
