USK - Barkod düzenlendi.

--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -2183,7 +2183,7 @@
                             Swal.fire('Başarılı!', 'Kayıt başarılı', 'success');
                             document.getElementById(btnid).onclick();
 
-                            if (etiketOnizleme && etiket) {
+                            if (data.trim().length > 0 && etiketOnizleme && etiket) {
                                 EtiketOnizle(data);
                             }
                         }
