USK - Barkod metraj.

--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -2122,7 +2122,7 @@
                         var etiketOnizleme = $("#etiket-onizleme").is(':checked');
 
                         ApiData[0]["ETIKET_ONIZLEME"] = etiketOnizleme;
-
+                        console.log(ApiData[0]);
                         $.ajax({
                             url: '@Url.Action("TrpzUretimKaydiSonuBarkodCiktisi", "Uretim")',
                             type: 'POST',
